tests/spec/compile-pass/057_pattern_move_and_mut.zn
// category: compile-pass
// profile: freestanding
// purpose: if-val and match support move and mut pattern modes for non-Copy payloads

module tests.pass.patternMoveAndMut;

enum Maybe<T> {
    Some(T),
    None,
}

enum State {
    Ready(Job),
    Done,
}

struct Job {
    priority: U32,
}

impl Job {
    destroy {}
}

fn consume(move job: Job) -> U32 {
    return job.priority;
}

fn takeOptional(maybe: Maybe<Job>) -> U32 {
    if val move Maybe.Some(job) = maybe {
        return consume(move job);
    }
    return 0;
}

fn bump(mut state: State) -> U32 {
    if val mut State.Ready(job) = state {
        job.priority = job.priority + 1;
        return job.priority;
    }
    return 0;
}

fn finish(move state: State) -> U32 {
    return match move state {
        State.Ready(job) => consume(move job),
        State.Done => 0,
    };
}
